update uwsgi configuration

--- a/.config/uwsgi/mysite.ini
+++ b/.config/uwsgi/mysite.ini
@@ -2,5 +2,17 @@
 chdir=/srv/mysite/
 home=/srv/mysite/venv/
 module=mysite.wsgi:application
-http=:8080
+
+uid=ubuntu
+gid=ubuntu
+
+socket=/tmp/mysite.sock
+chmod-socket=666
+chown-socket=ubuntu:ubuntu
+
+enable-threads=true
 master=true
+vacuum=true
+pidfile=/tmp/mysite.pid
+logto=/var/log/uwsgi/mysite/@(exec://date +%%y-%%m-%%d).log
+log-reopen=true
