--- a/.config/nginx/mysite.conf
+++ b/.config/nginx/mysite.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name 52.79.110.17;
+    server_name *.compute.amazonaws.com;
     charset utf-8;
     client_max_body_size 128M;
 
