rename project name

--- a/.config/nginx/mysite.conf
+++ b/.config/nginx/mysite.conf
@@ -5,11 +5,11 @@ server {
     client_max_body_size 128M;
 
     location / {
-        uwsgi_pass  unix:///tmp/mysite.sock;
+        uwsgi_pass  unix:///tmp/hsukju-blog.sock;
         include     uwsgi_params;
     }
 
     location /static/ {
-        alias /srv/mysite/static/;
+        alias /srv/hsukju-blog/static/;
     }
 }
