--- a/.config/uwsgi/mysite.ini
+++ b/.config/uwsgi/mysite.ini
@@ -1,18 +1,18 @@
 [uwsgi]
-chdir=/srv/mysite/
-home=/srv/mysite/venv/
-module=mysite.wsgi:application
+chdir=/srv/hsukju-blog/
+home=/srv/hsukju-blog/venv/
+module=hsukju-blog.wsgi:application
 
 uid=ubuntu
 gid=ubuntu
 
-socket=/tmp/mysite.sock
+socket=/tmp/hsukju-blog.sock
 chmod-socket=666
 chown-socket=ubuntu:ubuntu
 
 enable-threads=true
 master=true
 vacuum=true
-pidfile=/tmp/mysite.pid
-logto=/var/log/uwsgi/mysite/@(exec://date +%%y-%%m-%%d).log
+pidfile=/tmp/hsukju-blog.pid
+logto=/var/log/uwsgi/hsukju-blog/@(exec://date +%%y-%%m-%%d).log
 log-reopen=true
