--- a/.config/uwsgi/hsukju-blog.ini
+++ b/.config/uwsgi/hsukju-blog.ini
@@ -1,6 +1,6 @@
 [uwsgi]
 chdir=/srv/hsukju-blog/
-home=/srv/hsukju-blog/venv/
+home=/srv/hsukju-blog/.venv/
 module=hsukju-blog.wsgi:application
 
 uid=ubuntu
