fix no python application found

--- a/.config/uwsgi/hsukju-blog.ini
+++ b/.config/uwsgi/hsukju-blog.ini
@@ -1,7 +1,7 @@
 [uwsgi]
 chdir=/srv/hsukju-blog/
 home=/srv/hsukju-blog/.venv/
-module=hsukju-blog.wsgi:application
+module=config.wsgi:application
 
 uid=ubuntu
 gid=ubuntu
