fix nginx in docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
     django-web:
         container_name: blogproject
-        image: hsukju-blog/blogproject
+        image: hsukju00/blogproject
         ports:
             - "8000:8000"
         build: ./blogproject
@@ -15,7 +15,6 @@ services:
         image: nginx:latest
         ports:
             - "80:80"
-        build: ./nginx
         volumes:
             - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
             - uwsgi_sock:/tmp
