change deploy method

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
         port: ${{ secrets.AWS_SSH_PORT }}
         script_stop: true
         script: |
-          cd /srv/hsukju-blog
-          git pull
-          sudo systemctl daemon-reload
-          sudo systemctl restart uwsgi nginx
+          cd ~/hsukju-blog/
+          git fetch; git pull
+          docker-compose down --rmi 'all'
+          docker-compose up -d
