--- a/.github/workflows/run-and-test.yml
+++ b/.github/workflows/run-and-test.yml
@@ -22,6 +22,7 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
+        cd ./blogproject/
         pip install -r requirements.txt
     - name: Run Tests
       run: |
