--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,6 @@ services:
     django-web:
         container_name: blogproject
         image: hsukju00/blogproject
-        ports:
-            - "8000:8000"
         build: ./blogproject
         volumes:
             - uwsgi_sock:/tmp
@@ -15,6 +13,8 @@ services:
         image: nginx:latest
         ports:
             - "80:80"
+        env_file:
+            - ".env"
         volumes:
             - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
             - uwsgi_sock:/tmp
