--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name ${NGINX_HOST};
 
     location / {
         uwsgi_pass        unix:///tmp/uwsgi.sock;
