--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,6 @@ jobs:
         script_stop: true
         script: |
           cd ~/hsukju-blog/
-          git fetch; git pull
-          docker-compose down --rmi 'all'
-          docker-compose up -d
+          git pull
+          docker-compose down 
+          docker-compose up -d --build
