--- a/blogproject/requirements.txt
+++ b/blogproject/requirements.txt
@@ -6,6 +6,7 @@ charset-normalizer==3.1.0
 cryptography==40.0.2
 Deprecated==1.2.13
 Django==4.2.1
+django-bootstrap-icons==0.8.3
 django-bootstrap-v5==1.0.11
 idna==3.4
 pycparser==2.21
