--- a/blogproject/requirements.txt
+++ b/blogproject/requirements.txt
@@ -9,6 +9,7 @@ Django==4.2.1
 django-bootstrap-icons==0.8.3
 django-bootstrap-v5==1.0.11
 idna==3.4
+Markdown==3.4.3
 pycparser==2.21
 PyGithub==1.58.2
 PyJWT==2.7.0
